# super-int

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  contribute_zh.md  format_coding_style.py  make.bat  test.c
.github/workflows/: test.yml
bigint/: bigint.h  bigint.hh  bigint_src.h  bitint.hh  define.h
include/: si_bigint.h
sint/: bigint.hh  bigint_src.h  bitint.hh  define.hh
sint/bitint/: bitint.hh  ubitint.hh
sint/si_bigint/: si_bigint.c  si_bigint.h
src/: si_bigint.c
test/: CMakeLists.txt  common.h  main.cc  simd_status.c  test.c  test.cpp  test_add.c  test_and.c  test_bitint.cc  test_bitint.hh  test_eq.c  test_not.c  test_si_bigint.c  test_si_bigint.hh  test_sub.c  test_two_complement.c  test_uBitInt.cc  test_uBitInt.hh
test/si_bigint/: test_si_bigint.c
test_win/: test.py
